# Cognitio

./: .gitignore  Cargo.toml
examples/: basic.rs
macros/builder/: Cargo.toml
macros/builder/src/: lib.rs
src/: data.rs  lib.rs  trainer.rs
src/activations/: elu.rs  exp.rs  identity.rs  mod.rs  sigmoid.rs  softplus.rs  softsign.rs  swish.rs  tanh.rs
src/constraints/: mod.rs  none.rs  positive.rs
src/datasets/: mnist.rs
src/initializers/: constant.rs  mod.rs  random.rs  variance_scaling.rs
src/layers/: activation.rs  add.rs  convert.rs  dense.rs  dot.rs  embedding.rs  mod.rs  reshape.rs  softmax.rs  split.rs
src/layers/convolution/: conv.rs  conv1d.rs  conv2d.rs  conv3d.rs  mod.rs
src/layers/deconvolution/: deconv1d.rs  deconv2d.rs  deconv3d.rs  mod.rs
src/layers/pooling/: mod.rs  pooling.rs  pooling1d.rs  pooling2d.rs  pooling3d.rs
src/losses/: mod.rs  square.rs
src/metrics/: mod.rs
src/model/: mod.rs  model_tuple.rs  sequential.rs
src/optimizers/: adadelta.rs  adagrad.rs  adam.rs  adamax.rs  amsgrad.rs  mini_batch.rs  mod.rs  noise.rs  sgd.rs
src/regularizers/: l1.rs  l1_l2.rs  l2.rs  mod.rs  none.rs
src/schedules/: exponential_decay.rs
